--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat");
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: "Montserrat", sans-serif !important;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  min-height: inherit;
+}
+
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Montserrat", sans-serif !important;
+  /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace; */
+}
+
+/* CSS cho thanh cuộn */
+::-webkit-scrollbar {
+  width: 10px;
+  /* Độ rộng của thanh cuộn */
+}
+
+/* Track (phần nền của thanh cuộn) */
+::-webkit-scrollbar-track {
+  background: #000;
+  /* Màu nền của thanh cuộn */
+}
+
+/* Thumb (thanh cuộn chính) */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  /* Màu của thanh cuộn */
+}
+
+/* Thumb khi hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  /* Màu của thanh cuộn khi hover */
 }
