--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -36,7 +36,7 @@
     }
   }
 }
-:not(.active) {
+.navbar__item_content:not(.active) {
   color: #000 !important;
 }
 .icon {
@@ -65,4 +65,5 @@
   font-family: "Alfa Slab One", sans-serif;
   font-weight: 700;
   margin: 0 !important;
+  color: #000;
 }
