--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -8,7 +8,7 @@
 .header {
   position: fixed;
   z-index: 100;
-  width: 100%;
+  width: 100vw;
   transition: background-color 0.5s linear;
   background-color: transparent;
   display: flex;
@@ -64,6 +64,25 @@
   font-size: 28px;
   font-family: "Alfa Slab One", sans-serif;
   font-weight: 700;
-  margin: 0 !important;
   color: #000;
+}
+@media screen and (max-width: 480px) {
+  .header {
+    padding: 0 12px;
+  }
+  .logo {
+    font-size: 13px;
+  }
+  .navbar {
+    display: none;
+  }
+  .icon {
+    margin-right: 0;
+    & > :not(:last-child) {
+      margin-left: 0;
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+  }
 }
