--- a/src/pages/home/HomePage.scss
+++ b/src/pages/home/HomePage.scss
@@ -39,6 +39,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 8px;
 }
 
 .icon_intro:hover ~ .wrapper {
