--- a/src/components/sidebar/SideMenu.scss
+++ b/src/components/sidebar/SideMenu.scss
@@ -1,6 +1,9 @@
 .menubox {
-  display: inline-block;
+  position: sticky;
+  display: block;
   width: 256px;
   margin-top: 30px;
   border: none;
+  top: 70px;
+  font-family: "Montserrat", sans-serif;
 }
