--- a/src/layouts/CollectionsLayout.scss
+++ b/src/layouts/CollectionsLayout.scss
@@ -7,14 +7,14 @@
   display: flex;
   align-items: center;
 }
-.main {
-  position: relative;
+.mainPage {
+  display: flex;
+  flex-direction: column;
   padding: 0 110px;
-  min-height: 280;
+  min-height: 2000px;
   background-color: white;
 }
 .sidebox {
-  position: sticky;
-  top: 70px;
-  z-index: 20;
+  // display: contents;
+  position: relative;
 }
