add search form

--- a/src/components/cart/Cart.scss
+++ b/src/components/cart/Cart.scss
@@ -39,6 +39,11 @@
   }
   &__container {
     display: flex;
+    flex-direction: column;
+    max-height: 320px;
+  }
+  &_scroll {
+    overflow-y: scroll;
   }
 }
 .cart__total {
