--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ code {
 
 /* Track (phần nền của thanh cuộn) */
 ::-webkit-scrollbar-track {
-  background: #000;
+  background: #fff !important;
 
   /* Màu nền của thanh cuộn */
 }
