--- a/src/layouts/CollectionsLayout.scss
+++ b/src/layouts/CollectionsLayout.scss
@@ -11,8 +11,8 @@
   display: flex;
   flex-direction: column;
   padding: 0 110px;
-  min-height: 2000px;
   background-color: white;
+  border-bottom: 1px solid #ccc;
 }
 .sidebox {
   // display: contents;
