--- a/src/components/cart/CartItemPreview.scss
+++ b/src/components/cart/CartItemPreview.scss
@@ -3,3 +3,11 @@
     font-weight: 600;
   }
 }
+.delBtn {
+  position: absolute;
+  top: 8px;
+  right: 0;
+  font-size: 12px;
+  font-weight: 700;
+  cursor: pointer;
+}
