add to cart from detail page

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -62,7 +62,7 @@
 }
 .logo {
   font-size: 28px;
-  font-family: "Alfa Slab One", sans-serif;
+  font-family: "Alfa Slab One", sans-serif !important;
   font-weight: 700;
   color: #000;
 }
