--- a/src/layouts/CollectionsLayout.scss
+++ b/src/layouts/CollectionsLayout.scss
@@ -10,7 +10,7 @@
 .mainPage {
   display: flex;
   flex-direction: column;
-  padding: 0 110px;
+  padding: 0 110px 64px 110px;
   background-color: white;
   border-bottom: 1px solid #ccc;
 }
